[tool.poetry]
name = "bs4boards"
version = "1.0.0"
authors = ["ntrrpt"]
description = "dummy"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.3"
requests = "2.31.0"
loguru = "^0.7.2"
psutil = "^5.9.8"
pyrfc6266 = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
